change app template

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
 <div class='container-fluid'>
   <div class='row'>
-    <div class='col-sm-7 body-content'>
-      <div class="row header-logo">
-        <h1>Digital Broker</h1>
-        <router-outlet></router-outlet>
+    <div class='col-sm-6 offset-lg-4 body-content'>
+      <div class="row">
+        <h1 class="title">Digital Broker</h1>
+        <h4>Welcome to Modern Web Development Workshop :)</h4>
       </div>
-      <div class="col-sm-2"></div>
+      <div class="row">
+          <router-outlet></router-outlet>
+      </div>
     </div>
   </div>
 </div>
