search page added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
-<div class='container-fluid'>
+<div class='app container-fluid'>
   <div class='row'>
     <div class='col-sm-7 body-content'>
-      <div class="row header-logo">
+      <div class="row">
         <h1>Digital Broker</h1>
-        <router-outlet></router-outlet>
+      </div>
+      <div class="row">
+          <router-outlet></router-outlet>
       </div>
       <div class="col-sm-2"></div>
     </div>
