--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class='app container-fluid'>
+<div class='container-fluid'>
   <div class='row'>
     <div class='col-sm-7 body-content'>
       <div class="row">
@@ -7,7 +7,7 @@
       <div class="row">
           <router-outlet></router-outlet>
       </div>
-      <div class="col-sm-2"></div>
+      <!-- <div class="col-sm-2"></div> -->
     </div>
   </div>
 </div>
