--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,6 @@
-.app {
-    margin-left: 10px;
-    margin-top: 10px;
-}
 h1 {
     font-weight: bold;
+}
+div {
+    .row { margin: 0; padding: 0 }
 }
