--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
       <div class="row">
           <router-outlet></router-outlet>
       </div>
-      <!-- <div class="col-sm-2"></div> -->
+      <div class="col-sm-2"></div>
     </div>
   </div>
 </div>
