--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class='row'>
     <div class='col-sm-7 body-content'>
       <div class="row">
-        <h1>Digital Broker</h1>
+        <h1 class="title">Digital Broker</h1>
       </div>
       <div class="row">
           <router-outlet></router-outlet>
