--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -1,2 +1,3 @@
 <h2>Aktien suchen</h2>
 <search-bar (termChanged)="onTermChanged($event)"></search-bar>
+<stock-list [stocks]="stocks"></stock-list>
