--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div class='container-fluid'>
   <div class='row'>
-    <div class='col-sm-7 body-content'>
+    <div class='col-sm-6 offset-lg-4 body-content'>
       <div class="row">
         <h1 class="title">Digital Broker</h1>
       </div>
       <div class="row">
           <router-outlet></router-outlet>
       </div>
-      <div class="col-sm-2"></div>
+      <!-- <div class="col-sm-2"></div> -->
     </div>
   </div>
 </div>
