--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -1,3 +1,3 @@
 <h2>Aktien suchen</h2>
-<search-bar (termChanged)="onTermChanged($event)"></search-bar>
+<search-bar (termChanged)="addStock($event)"></search-bar>
 <stock-list [stocks]="stocks"></stock-list>
